Change titles. Change button color

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bootstrap Example</title>
+    <title>Idenface Docs</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
@@ -12,12 +12,12 @@
         <div class="col-md-6">
             <div class="card text-center">
                 <div class="card-header">
-                    <h1 class="card-title">Welcome to My Page</h1>
+                    <h1 class="card-title">Idenface Docs</h1>
                 </div>
                 <div class="card-body">
-                    <p class="card-text">Explore the links below to learn more:</p>
+                    <p class="card-text">Explore the links below to explore more:</p>
                     <a href="idenface-js" class="btn btn-primary btn-block">Idenface JavaScript SDK Docs</a>
-                    <a href="idenface-demo-go" class="btn btn-secondary btn-block">Idenface Demo Site Docs</a>
+                    <a href="idenface-demo-go" class="btn btn-primary btn-block">Idenface Demo Site Docs</a>
                 </div>
             </div>
         </div>
