Generate SDK documentation for IDenCard version 1.2.0

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                     <p class="card-text">Explore the links below to explore more:</p>
                     <a href="idenface-js" class="btn btn-primary btn-block">Idenface JavaScript SDK Docs</a>
                     <a href="idenface-demo-go" class="btn btn-primary btn-block">Idenface Demo Site Docs</a>
+                    <a href="idencard-web-sdk-docs" class="btn btn-primary btn-block">Idencard Web SDK Docs</a>
                 </div>
             </div>
         </div>
